# nbody-viz

./: .gitignore  README.md  pyproject.toml
src/: main.py  particles.py
