[project]
name = "flyby-viz"
version = "0.1.0"
description = "Visualizations of n-body flyby simulations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "scipy>=1.14.1",
]
